# sensor_placement

./: CMakeLists.txt
include/: epanet2.h
lib/: epanet2.lib
src/: data.py  main-bak.c  main.c  main_random burst.c  noise_and_sample.py
